--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -28,7 +28,12 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:allowBackup="false"
     android:theme="@style/AppTheme"
+
   >
+    <meta-data
+    android:name="com.google.android.geo.API_KEY"
+    android:value="AIzaSyDelaQOVM7MoN0egNkmvrETBMXHvn5gOQA"/>
+   <uses-library android:name="org.apache.http.legacy" android:required="false"/>
     <meta-data android:name="expo.modules.updates.EXPO_UPDATE_URL" android:value="YOUR-APP-URL-HERE"/>
     <meta-data android:name="expo.modules.updates.EXPO_SDK_VERSION" android:value="YOUR-APP-SDK-VERSION-HERE"/>
     <activity
