--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     ext {
         buildToolsVersion = "29.0.2"
+        playServicesVersion = "17.0.0"
         minSdkVersion = 21
         compileSdkVersion = 29
         targetSdkVersion = 29
