--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,8 @@
 rootProject.name = 'CloneUber'
 
+include ':react-native-maps'
+project(':react-native-maps').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-maps/lib/android')
+
 apply from: '../node_modules/react-native-unimodules/gradle.groovy'
 includeUnimodulesProjects()
 
