--- a/package.json
+++ b/package.json
@@ -8,18 +8,25 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^2.0.2",
     "expo": "~40.0.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-google-places-autocomplete": "^3.1.1",
     "react-native": "~0.63.4",
+    "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-google-places-autocomplete": "^2.1.3",
+    "react-native-maps": "0.27.1",
+    "react-native-maps-directions": "^1.8.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.15.0",
     "react-native-unimodules": "~0.12.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
